resuelvo el problema de los links volver

--- a/pages/mariokart.html
+++ b/pages/mariokart.html
@@ -321,7 +321,7 @@
             </li>
         </ul>
         
-        <a class="volver" href="index.html">Volver</a>
+        <a class="volver" href="/index.html">Volver</a>
     </section> 
     
 </main>
